# CMRxRecon2025-snippets

./: .gitignore  .gitmodules  workflow-mapping.cwl  workflow-task-s1.cwl  workflow-task-s2.cwl  workflow-task1.cwl  workflow-task2-s2.cwl  workflow-task2.cwl  workflow.cwl
Docker/: .gitignore  CalEvalMap.py  Dockerfile  Dockerfile.dev  Main_Score.py  README.txt  cardiac_utils_test.py  json2csv.py  loadFun.py  logger.py  score-example.py  score.py  score_all.py  score_with_std.py  score_with_std_enhance.py  test_message.py  validate-example.py
evaluation-2024/: Dockerfile  Evaluation.py  Main_Score2024.py  README.md  Test_Score2024.py  environment.yml  pyproject.toml  requirements.txt  sources.list
evaluation-2025/: Dockerfile  Dockerfile.base  Evaluation.py  README.md  Val_Score2025.py  Val_Score2025_v2.py  Val_Score2025_v3.py  environment.yml  loadFun.py  requirements.txt
performance/: README.md  evaluate-matlab.py  evaluate.py  pull-image.py  statistic.py
scripts/: check-script.py  md5generator.py
steps/: email_score.cwl  score-mapping.cwl  score-task-s1.cwl  score-task-s2.cwl  score-task1.cwl  score-task2.cwl  score.cwl  upload_log_file.cwl  validate.cwl
test-2024/: .env-example  README.md  pyproject.toml  run-full.py  run.py  status.py  test.py  test1.py  xlsx2json.py
test-2024/docker-example/: Dockerfile
