[tool.poetry]
name = "test-2024"
version = "0.1.0"
description = ""
authors = ["Daryl.Xu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
docker = "^7.1.0"

[[tool.poetry.source]]
name = 'pypi-tsinghua'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple/'


[tool.poetry.group.dev.dependencies]
t4u = {git = "https://gitee.com/passer-team/t4u.git", subdirectory = "Python"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
